2013-06-24  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add "power8"
	entry mapped to PPC_PLATFORM_POWER8.
	* sysdeps/powerpc/dl-procinfo.h (_DL_PLATFORMS_COUNT): Increment for
	POWER8.
	(PPC_PLATFORM_POWER8): Add new platform bit for POWER8 processor.
	(_dl_string_platform): Add case for exporting platform position for
	POWER8.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power8/Implies: Chain
	search path to sysdeps/powerpc/powerpc32/power8 directory.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/power8/Implies: Chain
	search path to sysdeps/powerpc/powerpc64/power8 directory.
	* sysdeps/powerpc/powerpc32/power8/Implies: Chain search path to
	power7 directories.
	* sysdeps/powerpc/powerpc64/power8/Implies: Chain search path to
	power7 directories.

2013-06-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* nptl/sysdeps/powerpc/tls.h (tcbhead_t): Add Event-Based Branch
	fields.

2013-06-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15605]
	* sysdeps/generic/symbol-hacks.h: Add workaround for memset/memmove calls
	generated by the compiler on loop optimizations.
	* sysdeps/wordsize-32/symbol-hacks.h: Include next symbol-hacks.h for
	general definitions.

2013-06-11  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add ppc405,
	ppc440, ppc464, and ppc476, merging from ports/ dl-procinfo.c.
	* sysdeps/powerpc/dl-procinfo.h: Fix whitespace by correcting spaces
	with tabs where appropriate.
	[PPC_PLATFORM_PPC405]: Define new platform merging from ports/
	dl-procinfo.h.
	[PPC_PLATFORM_PPC440]: Likewise.
	[PPC_PLATFORM_PPC464]: Likewise.
	[PPC_PLATFORM_PPC476]: Likewise.
	(_dl_string_platform): Add support for detecting ppc405, ppc440,
	ppc464, and ppc476 platform strings merging from ports/
	dl-procinfo.h.

2013-05-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* manual/platform.texi: Add PowerPC PPR function set documentation.