@@ -987,7 +987,7 @@ typedef struct
 
 /* Some more special a_type values describing the hardware.  */
 #define AT_PLATFORM	15		/* String identifying platform.  */
-#define AT_HWCAP	16		/* Machine dependent hints about
+#define AT_HWCAP	16		/* Machine-dependent hints about
 					   processor capabilities.  */
 
 /* This entry gives some information about the FPU initialization
@@ -1008,6 +1008,9 @@ typedef struct
 #define AT_BASE_PLATFORM 24		/* String identifying real platforms.*/
 
 #define AT_RANDOM	25		/* Address of 16 random bytes.  */
+
+#define AT_HWCAP2	26		/* More machine-dependent hints about
+					   processor capabilities.  */
 
 #define AT_EXECFN	31		/* Filename of executable.  */
 
