@@ -1,3 +1,7 @@
+2013-06-26  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
+
+	* elf/elf.h (AT_HWCAP2): Add a new a_type entry.
+
 2013-06-24  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
 
 	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add "power8"
